[package]
name = "statistic"
version = "0.1.0"
edition = "2024"

[dependencies]
envfile = "0.2.1"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }

# Analizador de sintaxis
tree-sitter = "0.25.8"
tree-sitter-java = "0.23.5"

# Trazas
log = "0.4.27"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = { version = "0.30.0", features = ["trace"] }
opentelemetry-otlp = { version = "0.30.0", features = ["trace", "grpc-tonic"] }
opentelemetry_sdk = "0.30.0"
